use mysql in production

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,5 @@ development:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql
+  database: trippy
